--- a/.env
+++ b/.env
@@ -1,12 +1,11 @@
 # Database configuration
-POSTGRES_DB=defaultdb
-POSTGRES_USER=avnadmin
-POSTGRES_PORT=14288
-POSTGRES_PASSWORD=AVNS_813hyteX6uQQQndbHmM
-DATABASE_URL=postgres://avnadmin:AVNS_813hyteX6uQQQndbHmM@youtuberetriever-akinsulereolusola-9b79.h.aivencloud.com:14288/defaultdb?sslmode=require
-
+POSTGRES_DB=mvijdael
+POSTGRES_USER=mvijdael
+POSTGRES_PORT=5432
+POSTGRES_PASSWORD=tqvh23hSLN51l9UzzOOAoroI9-UZj5c4
+DATABASE_URL=postgres://mvijdael:tqvh23hSLN51l9UzzOOAoroI9-UZj5c4@raja.db.elephantsql.com/mvijdael
 # Redis configuration
-REDIS_URL=redis://redis:6379/0
+REDIS_URL=rediss://red-creps9ggph6c73eugjs0:8JzxmOh6iDJ47sPjGM78r7tOVdizAHw1@oregon-redis.render.com:6379
 
 # RabbitMQ configuration
 RABBITMQ_URL=amqps://lkwedodk:FKQnL0M20m33KsOwflMGZf0uVqza1c06@beaver.rmq.cloudamqp.com/lkwedodk
