--- a/data_retriever/requirements.txt
+++ b/data_retriever/requirements.txt
@@ -1,5 +1,9 @@
 fastapi==0.68.0
 uvicorn==0.15.0
-SQLAlchemy==1.4.31
-psycopg2-binary==2.9.3
+sqlalchemy==1.4.31
+asyncpg==0.25.0
 redis==3.5.3
+pydantic==1.8.2
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-multipart==0.0.5
