--- a/data_retriever/requirements.txt
+++ b/data_retriever/requirements.txt
@@ -1,7 +1,8 @@
 fastapi==0.68.0
 uvicorn==0.15.0
 sqlalchemy==1.4.31
-asyncpg==0.25.0
+asyncpg==0.24.0
+psycopg2-binary==2.9.3
 redis==3.5.3
 pydantic==1.8.2
 python-jose[cryptography]==3.3.0
