chore: added readme

--- a/infrastructure/helm/data-retriever/templates/deployment.yaml
+++ b/infrastructure/helm/data-retriever/templates/deployment.yaml
@@ -20,7 +20,8 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.service.port }}
-          env:
-            {{- toYaml .Values.env | nindent 12 }}
+          envFrom:
+            - secretRef:
+                name: {{ .Values.envFromSecret }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
