--- a/infrastructure/helm/data-simulator/templates/deployment.yaml
+++ b/infrastructure/helm/data-simulator/templates/deployment.yaml
@@ -18,7 +18,8 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          env:
-            {{- toYaml .Values.env | nindent 12 }}
+          envFrom:
+            - secretRef:
+                name: {{ .Values.envFromSecret }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
