--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,6 +15,13 @@ jobs:
     - name: Set up Docker Build
       uses: docker/setup-buildx-action@v1
 
+    - name: Create .env file
+      run: |
+        echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
+        echo "REDIS_URL=${{ secrets.REDIS_URL }}" >> .env
+        echo "API_PORT=${{ secrets.API_PORT }}" >> .env
+        echo "RABBITMQ_URL=${{ secrets.RABBITMQ_URL }}" >> .env
+
     - name: Login to Container Registry
       uses: docker/login-action@v1
       with:
@@ -35,6 +42,11 @@ jobs:
         context: ./data_retriever
         push: true
         tags: llmretriever.azurecr.io/data-retriever:latest
+
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v1
