--- a/infrastructure/helm/data-retriever/values.yaml
+++ b/infrastructure/helm/data-retriever/values.yaml
@@ -17,10 +17,4 @@ resources:
     cpu: 100m
     memory: 128Mi
 
-env:
-  - name: DATABASE_URL
-    value: "postgres://mvijdael:tqvh23hSLN51l9UzzOOAoroI9-UZj5c4@raja.db.elephantsql.com/mvijdael"
-  - name: REDIS_URL
-    value: "rediss://red-creps9ggph6c73eugjs0:8JzxmOh6iDJ47sPjGM78r7tOVdizAHw1@oregon-redis.render.com:6379"
-  - name: API_PORT
-    value: "8000"
+envFromSecret: llm-benchmark-secret
