--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,14 +32,14 @@ jobs:
     - name: Build and push Data Simulator
       uses: docker/build-push-action@v2
       with:
-        context: ../data_simulator
+        context: ./data_simulator/Dockerfile
         push: true
         tags: llmretriever.azurecr.io/data-simulator:latest
 
     - name: Build and push Data Retriever
       uses: docker/build-push-action@v2
       with:
-        context: ../data_retriever
+        context: ./data_retriever/Dockerfile
         push: true
         tags: llmretriever.azurecr.io/data-retriever:latest
 
