--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Build and push Data Simulator
       uses: docker/build-push-action@v2
       with:
-        context: ./data_simulator
+        context: ./data_simulator_temp
         push: true
         tags: llmretriever.azurecr.io/data-simulator:latest
 
