--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Set up Docker Build
       uses: docker/setup-buildx-action@v1
 
-    - name: Create .env file
+    - name: Create .env.example file
       run: |
         echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" >> .env
         echo "REDIS_URL=${{ secrets.REDIS_URL }}" >> .env
@@ -32,7 +32,7 @@ jobs:
     - name: Build and push Data Simulator
       uses: docker/build-push-action@v2
       with:
-        context: ./data_simulator_temp
+        context: ./data_simulator
         push: true
         tags: llmretriever.azurecr.io/data-simulator:latest
 
