--- a/infrastructure/helm/data-simulator/templates/deployment.yaml
+++ b/infrastructure/helm/data-simulator/templates/deployment.yaml
@@ -18,8 +18,7 @@ spec:
         - name: {{ .Chart.Name }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          envFrom:
-            - secretRef:
-                name: {{ .Values.envFromSecret }}
+          env:
+            {{- toYaml .Values.env | nindent 12 }}
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
