--- a/infrastructure/helm/data-retriever/templates/service.yaml
+++ b/infrastructure/helm/data-retriever/templates/service.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     {{- include "data-retriever.labels" . | nindent 4 }}
 spec:
-  type: LoadBalancer
+  type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.service.port }}
       targetPort: http
