--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - db
       - rabbitmq
     env_file:
-      - .env.example
+      - .env
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - RABBITMQ_URL=${RABBITMQ_URL}
@@ -42,7 +42,7 @@ services:
     ports:
       - "${API_PORT}:8000"
     env_file:
-      - .env.example
+      - .env
     environment:
       - DATABASE_URL=${DATABASE_URL}
       - REDIS_URL=${REDIS_URL}
